# GitHub-PR-Tracker

./: CMakeLists.txt  README.md  installer.nsi
qml/: PrCard.qml  PrList.qml  SettingsDialog.qml  ThemedCheckBox.qml  main.qml
qml/mock/prtracker/: PrFetcher.qml  qmldir
src/: PrFetcher.cpp  PrFetcher.h  main.cpp
